<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Search</string>
    <string name="media_library">Media Library</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share App</string>
    <string name="contact_support">Contact Support</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="user_agreement">User agreement</string>
    <string name="android_course_url">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_email_body">Thanks to the developers for the awesome app!</string>
    <string name="support_email_subject">Thank you to the developers of Playlist Maker for an awesome app!</string>
    <string name="support_email_address">iPleasure@yandex.ru</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_was_found">Nothing was found</string>
    <string name="connection_issues">Connection issues\n\nLoading failed. Check\nyour internet connection</string>
    <string name="retry">Retry</string>
    <string name="you_searched">You searched</string>
    <string name="clear_history">Clear history</string>

    <!-- player_fragment-->
    <string name="duration">Duration</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="genre">genre</string>
    <string name="country">Country</string>

    <!-- activity_MediaLibraries-->
    <string name="favorite_tracks">Favorite tracks</string>
    <string name="playlists">Playlists</string>
    <string name="library_is_empty">Your media library is empty</string>
    <string name="new_playlist">New playlisty</string>
    <string name="you_havent_playlist">You havent created any playlists</string>

    <!-- create_playlist_fragment-->
    <string name="name">Name*</string>
    <string name="description">Description</string>
    <string name="create">Create</string>

    <!-- insert_in_playlist_fragment-->
    <string name="add_to_playlist">Add to playlist</string>

    <!-- FragmentCreatePlaylist-->
    <string name="finish_creating_the_playlist">Finish creating the playlist?</string>
    <string name="all_unsaved_data_will_be_lost">All unsaved data will be lost</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="playlist">Playlist</string>
    <string name="created">Created</string>






</resources>