<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_activity_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/app_name"
            android:textColor="@color/YP_White"
            android:textSize="22sp" />

    </LinearLayout>

    <Button style="@style/ActMainButtonStyle"
        android:id="@+id/findBtn"
        android:layout_marginTop="24dp"
        android:text="@string/search"
        app:icon="@drawable/ic_find_24"/>

    <Button style="@style/ActMainButtonStyle"
        android:id="@+id/mediaLibrBtn"
        android:text="@string/media_library"
        app:icon="@drawable/ic_medialibrarry_24"/>

    <Button style="@style/ActMainButtonStyle"
        android:id="@+id/settingsBtn"
        android:layout_marginBottom="24dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24"/>

</LinearLayout>