<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- HEADER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textSize="22sp"
                android:textColor="@color/textColor_activity_settings"
                android:fontFamily="@font/ys_display_medium"/>
        </LinearLayout>

        <!-- DARK MODE -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="24dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_activity_settings">

                <TextView
                    style="@style/ActSettingsTextViewStyle"
                    android:id="@+id/textView3"
                    android:text="@string/dark_mode"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/themeSwitcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:thumbTint="@color/switch_thumb_tint"
                    app:trackTint="@color/switch_track_tint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!-- SHARE APP -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="61dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_activity_settings">

                <TextView
                    style="@style/ActSettingsTextViewStyle"
                    android:id="@+id/share_app"
                    android:text="@string/share_app"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    style="@style/ActSettingsImageViewStyle"
                    android:id="@+id/shareAppImView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_shareapp_24"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!-- CONTACT SUPPORT -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="61dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_activity_settings">

                <TextView
                    style="@style/ActSettingsTextViewStyle"
                    android:id="@+id/contact_support"
                    android:text="@string/contact_support"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/ActSettingsImageViewStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_writetosupport_24"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!-- USER AGREEMENT -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="61dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_activity_settings">

                <TextView
                    style="@style/ActSettingsTextViewStyle"
                    android:id="@+id/user_agreement"
                    android:text="@string/user_agreement"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/imageView3"
                    style="@style/ActSettingsImageViewStyle"
                    android:tint="@color/YP_White"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_useragreement_24"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
