<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_playlist_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_track_layout">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/cardview_track_layout"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="@android:color/transparent"
                app:srcCompat="@drawable/ic_back_arrow_24" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/new_playlist"
                android:textColor="@color/textColor_activity_settings"
                android:textSize="22sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/addPicture"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/playlist_add_photo" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.CreatePlaylist.TextInputLayout"
            android:id="@+id/name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"

            android:hint="@string/name"
            android:focusable="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPicture">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlist_name"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:gravity="center_vertical"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.CreatePlaylist.TextInputLayout"
            android:id="@+id/description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"

            android:hint="@string/description"
            android:focusable="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlist_description"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:gravity="center_vertical"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_playlist_button"
            android:layout_width="0dp"
            android:layout_height="44dp"

            android:layout_marginTop="24dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="32dp"

            android:text="@string/create"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/YP_White"
            android:fontFamily="@font/ys_display_medium"
            android:stateListAnimator="@null"

            android:background="@drawable/bg_create_playlist"

            android:padding="0dp"

            android:enabled="false"

            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@id/description_input_layout"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
